crates/swc_ecma_parser/tests/test262-error-references/fail/6856c5a3a26b5a3f.js.stderr
error: Identifier cannot follow number
 --> $DIR/tests/test262-parser/fail/6856c5a3a26b5a3f.js:1:2
  |
1 | 0a
  |  ^

